compiler/snapshots/all-any.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling all-any.wipple... done

stdout:
True
False
True
False
