compiler/snapshots/average.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling average.wipple... done

stdout:
3
