compiler/snapshots/bound.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling bound.wipple... done

stdout:
Hello, world!
