compiler/snapshots/build-sequence.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling build-sequence.wipple... done

stdout:
0
1
2
3
4
