compiler/snapshots/call-function-diagnostic.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 1

stderr:
Compiling library/src/foundation... done
Compiling call-function-diagnostic.wipple... done
Error: compilation failed with 2 feedback item(s)

stdout:

Feedback:

`text :: String` (compiler/tests/call-function-diagnostic.wipple:4:18-4:32) (conflicting-types):

  `text :: String` (compiler/tests/call-function-diagnostic.wipple:4:18-4:32) is a `() -> String` (compiler/tests/call-function-diagnostic.wipple:3:17-3:38) or a `String` (compiler/tests/call-function-diagnostic.wipple:4:26-4:32), but it can only be one of these.

  `text :: String` (compiler/tests/call-function-diagnostic.wipple:4:18-4:32) must be the same type as `text` (compiler/tests/call-function-diagnostic.wipple:4:18-4:22), `produces-text` (compiler/tests/call-function-diagnostic.wipple:3:1-3:14), `text` (compiler/tests/call-function-diagnostic.wipple:4:42-4:46), and 7 others; double-check these.

  -  `() -> "Hello, world!"` (compiler/tests/call-function-diagnostic.wipple:3:17-3:38) is a _ -> _.

  -  `value` (library/src/foundation/io.wipple:11:9-11:14) must have the same type everywhere in this use of `show` (library/src/foundation/io.wipple:10:1-11:43).

`show` (compiler/tests/call-function-diagnostic.wipple:4:37-4:41) (not-a-function):

  `show` (compiler/tests/call-function-diagnostic.wipple:4:37-4:41) is not a function.

  Double-check your parentheses.
