compiler/snapshots/collections.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling collections.wipple... done

stdout:
