compiler/snapshots/colliding-instances.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 1

stderr:
Compiling library/src/foundation... done
Compiling colliding-instances.wipple... done
Error: compilation failed with 1 feedback item(s)

stdout:

Feedback:

`T : value => trait ()` (compiler/tests/colliding-instances.wipple:1:1-3:22) (conflicting-instances):

  `T : value => trait ()` (compiler/tests/colliding-instances.wipple:1:1-3:22) has multiple overlapping instances: `instance (T X)` (compiler/tests/colliding-instances.wipple:6:1-6:20), `instance (T X)` (compiler/tests/colliding-instances.wipple:7:1-7:20), `instance (T value)` (compiler/tests/colliding-instances.wipple:9:1-9:24), and 1 other.

  Only one of these instances can be defined at a time. Try making your instance more specific.
