compiler/snapshots/comment-at-end-of-block.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling comment-at-end-of-block.wipple... done

stdout:
42
