compiler/snapshots/complex-nested-bounds.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 1

stderr:
Compiling complex-nested-bounds.wipple... done
Error: compilation failed with 1 feedback item(s)

stdout:
Facts:
TypeDefinitionNode `Boolean` (compiler/tests/complex-nested-bounds.wipple:1:1-3:27)
  at compiler/tests/complex-nested-bounds.wipple:1:1-3:27
  has definition constraints
  has type Boolean
  is a definition
TypeParameterNode `value` (compiler/tests/complex-nested-bounds.wipple:5:7-5:12)
  at compiler/tests/complex-nested-bounds.wipple:5:7-5:12
  has type value
  is a type
  resolved to 1 definition(s): `value` (compiler/tests/complex-nested-bounds.wipple:5:7-5:12)
TypeParameterNode `value` (compiler/tests/complex-nested-bounds.wipple:5:23-5:28)
  at compiler/tests/complex-nested-bounds.wipple:5:23-5:28
  has type value
  is a type
  resolved to 1 definition(s): `value` (compiler/tests/complex-nested-bounds.wipple:5:7-5:12)
TypeParameterNode `value` (compiler/tests/complex-nested-bounds.wipple:5:32-5:37)
  at compiler/tests/complex-nested-bounds.wipple:5:32-5:37
  has type value
  is a type
  resolved to 1 definition(s): `value` (compiler/tests/complex-nested-bounds.wipple:5:7-5:12)
FunctionTypeNode `value -> value` (compiler/tests/complex-nested-bounds.wipple:5:23-5:37)
  at compiler/tests/complex-nested-bounds.wipple:5:23-5:37
  has type value -> value
  is a type
TraitDefinitionNode `Not : value => trait (value -> value)` (compiler/tests/complex-nested-bounds.wipple:5:1-5:38)
  at compiler/tests/complex-nested-bounds.wipple:5:1-5:38
  has definition constraints
  has instances
  has type parameters
  has type value -> value
  is a definition
NamedTypeNode `Boolean` (compiler/tests/complex-nested-bounds.wipple:6:15-6:22)
  at compiler/tests/complex-nested-bounds.wipple:6:15-6:22
  has type Boolean
  is a type
  resolved to 1 definition(s): `Boolean` (compiler/tests/complex-nested-bounds.wipple:1:1-3:27)
BoundConstraintNode `Not Boolean` (compiler/tests/complex-nested-bounds.wipple:6:10-6:23)
  at compiler/tests/complex-nested-bounds.wipple:6:10-6:23
VariableExpressionNode `todo` (compiler/tests/complex-nested-bounds.wipple:6:26-6:30)
  at compiler/tests/complex-nested-bounds.wipple:6:26-6:30
  has type Boolean -> Boolean
  is an expression
  unresolved
InstanceDefinitionNode `instance (Not Boolean)` (compiler/tests/complex-nested-bounds.wipple:6:1-6:30)
  at compiler/tests/complex-nested-bounds.wipple:6:1-6:30
  has definition constraints
  has type Boolean -> Boolean
  is a definition
  resolved to 1 definition(s): `Not : value => trait (value -> value)` (compiler/tests/complex-nested-bounds.wipple:5:1-5:38)
TypeParameterNode `a` (compiler/tests/complex-nested-bounds.wipple:7:16-7:17)
  at compiler/tests/complex-nested-bounds.wipple:7:16-7:17
  has type a
  is a type
  resolved to 1 definition(s): `a` (compiler/tests/complex-nested-bounds.wipple:7:16-7:17)
TypeParameterNode `b` (compiler/tests/complex-nested-bounds.wipple:7:21-7:22)
  at compiler/tests/complex-nested-bounds.wipple:7:21-7:22
  has type b
  is a type
  resolved to 1 definition(s): `b` (compiler/tests/complex-nested-bounds.wipple:7:21-7:22)
FunctionTypeNode `a -> b` (compiler/tests/complex-nested-bounds.wipple:7:16-7:22)
  at compiler/tests/complex-nested-bounds.wipple:7:16-7:22
  has type a -> b
  is a type
BoundConstraintNode `Not (a -> b)` (compiler/tests/complex-nested-bounds.wipple:7:10-7:24)
  at compiler/tests/complex-nested-bounds.wipple:7:10-7:24
TypeParameterNode `b` (compiler/tests/complex-nested-bounds.wipple:7:36-7:37)
  at compiler/tests/complex-nested-bounds.wipple:7:36-7:37
  has type b
  is a type
  resolved to 1 definition(s): `b` (compiler/tests/complex-nested-bounds.wipple:7:21-7:22)
BoundConstraintNode `Not b` (compiler/tests/complex-nested-bounds.wipple:7:31-7:38)
  at compiler/tests/complex-nested-bounds.wipple:7:31-7:38
  is a constraint
  resolved to 1 definition(s): `Not : value => trait (value -> value)` (compiler/tests/complex-nested-bounds.wipple:5:1-5:38)
VariablePatternNode `f` (compiler/tests/complex-nested-bounds.wipple:7:41-7:42)
  at compiler/tests/complex-nested-bounds.wipple:7:41-7:42
  has type a -> b
  is a pattern
VariablePatternNode `x` (compiler/tests/complex-nested-bounds.wipple:7:46-7:47)
  at compiler/tests/complex-nested-bounds.wipple:7:46-7:47
  has type a
  is a pattern
VariableExpressionNode `not` (compiler/tests/complex-nested-bounds.wipple:7:51-7:54)
  at compiler/tests/complex-nested-bounds.wipple:7:51-7:54
  has type b -> b
  is an expression
  resolved to 1 definition(s): `not` (compiler/tests/complex-nested-bounds.wipple:9:1-9:40)
VariableExpressionNode `f` (compiler/tests/complex-nested-bounds.wipple:7:56-7:57)
  at compiler/tests/complex-nested-bounds.wipple:7:56-7:57
  has type a -> b
  is an expression
  resolved to 1 definition(s): `f` (compiler/tests/complex-nested-bounds.wipple:7:41-7:42)
VariableExpressionNode `x` (compiler/tests/complex-nested-bounds.wipple:7:58-7:59)
  at compiler/tests/complex-nested-bounds.wipple:7:58-7:59
  has type a
  is an expression
  resolved to 1 definition(s): `x` (compiler/tests/complex-nested-bounds.wipple:7:46-7:47)
CallExpressionNode `f x` (compiler/tests/complex-nested-bounds.wipple:7:56-7:59)
  at compiler/tests/complex-nested-bounds.wipple:7:56-7:59
  has type b
  is an expression
CallExpressionNode `not (f x)` (compiler/tests/complex-nested-bounds.wipple:7:51-7:60)
  at compiler/tests/complex-nested-bounds.wipple:7:51-7:60
  has type b
  is an expression
FunctionExpressionNode `x -> not (f x)` (compiler/tests/complex-nested-bounds.wipple:7:46-7:60)
  at compiler/tests/complex-nested-bounds.wipple:7:46-7:60
  has type a -> b
  is an expression
FunctionExpressionNode `f -> x -> not (f x)` (compiler/tests/complex-nested-bounds.wipple:7:41-7:60)
  at compiler/tests/complex-nested-bounds.wipple:7:41-7:60
  has type (a -> b) -> a -> b
  is an expression
InstanceDefinitionNode `instance (Not (a -> b))` (compiler/tests/complex-nested-bounds.wipple:7:1-7:60)
  at compiler/tests/complex-nested-bounds.wipple:7:1-7:60
  has definition constraints
  has type (a -> b) -> a -> b
  has type parameters
  is a definition
  resolved to 1 definition(s): `Not : value => trait (value -> value)` (compiler/tests/complex-nested-bounds.wipple:5:1-5:38)
TypeParameterNode `value` (compiler/tests/complex-nested-bounds.wipple:9:8-9:13)
  at compiler/tests/complex-nested-bounds.wipple:9:8-9:13
  has type value
  is a type
  resolved to 1 definition(s): `value` (compiler/tests/complex-nested-bounds.wipple:9:8-9:13)
TypeParameterNode `value` (compiler/tests/complex-nested-bounds.wipple:9:17-9:22)
  at compiler/tests/complex-nested-bounds.wipple:9:17-9:22
  has type value
  is a type
  resolved to 1 definition(s): `value` (compiler/tests/complex-nested-bounds.wipple:9:8-9:13)
FunctionTypeNode `value -> value` (compiler/tests/complex-nested-bounds.wipple:9:8-9:22)
  at compiler/tests/complex-nested-bounds.wipple:9:8-9:22
  has type value -> value
  is a type
TypeParameterNode `value` (compiler/tests/complex-nested-bounds.wipple:9:34-9:39)
  at compiler/tests/complex-nested-bounds.wipple:9:34-9:39
  has type value
  is a type
  resolved to 1 definition(s): `value` (compiler/tests/complex-nested-bounds.wipple:9:8-9:13)
BoundConstraintNode `Not value` (compiler/tests/complex-nested-bounds.wipple:9:29-9:40)
  at compiler/tests/complex-nested-bounds.wipple:9:29-9:40
  is a constraint
  resolved to 1 definition(s): `Not : value => trait (value -> value)` (compiler/tests/complex-nested-bounds.wipple:5:1-5:38)
ConstantDefinitionNode `not` (compiler/tests/complex-nested-bounds.wipple:9:1-9:40)
  at compiler/tests/complex-nested-bounds.wipple:9:1-9:40
  has definition constraints
  has type parameters
  has type value -> value
  is a definition
VariablePatternNode `not` (compiler/tests/complex-nested-bounds.wipple:10:1-10:4)
  at compiler/tests/complex-nested-bounds.wipple:10:1-10:4
ConstructorExpressionNode `Not` (compiler/tests/complex-nested-bounds.wipple:10:7-10:10)
  at compiler/tests/complex-nested-bounds.wipple:10:7-10:10
  has type value -> value
  is an expression
  resolved to 1 definition(s): `Not : value => trait (value -> value)` (compiler/tests/complex-nested-bounds.wipple:5:1-5:38)


Feedback:

`todo` (compiler/tests/complex-nested-bounds.wipple:6:26-6:30) (unresolved):

  Can't find `todo`.

  Double-check your spelling.
